...
                                <rect key="frame" x="0.0" y="88" width="428" height="24"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Array" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X4X-gx-RHS">
                                        <rect key="frame" x="0.0" y="0.0" width="209" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Dictionary" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u3V-Hz-Vma">
                                        <rect key="frame" x="219" y="0.0" width="209" height="24"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
...
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Create Int array with 10_000_000 elements" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMr-Xw-hqB">
                                            <rect key="frame" x="50.666666666666657" y="51.333333333333336" width="327" height="20.333333333333336"/>
                                            <accessibility key="accessibilityConfiguration" identifier="ArrayCreation"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" systemColor="linkColor"/>
...
                                    </constraints>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="MenuOption"/>
                                <connections>
                                    <outlet property="titleLabel" destination="swz-DK-6Ij" id="5nk-u8-MwU"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8NF-bD-nI6">
                                        <rect key="frame" x="0.0" y="0.0" width="398" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="InputTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K8S-76-5Km">
                                        <rect key="frame" x="0.0" y="54" width="398" height="34"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AdditionalTextField"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ets-hY-0uA">
                                        <rect key="frame" x="0.0" y="0.0" width="398" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AllMatchesButton"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Button">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l5K-uB-d7L">
                                        <rect key="frame" x="0.0" y="30" width="398" height="25"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AllMatchesLabel"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="25" id="7v6-bQ-4cX"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iis-vq-eaj">
                                        <rect key="frame" x="0.0" y="55" width="398" height="30"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AllNotMatchesButton"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Button">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="wordWrap" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jYi-Q2-F71">
                                        <rect key="frame" x="0.0" y="110" width="398" height="39"/>
                                        <accessibility key="accessibilityConfiguration" identifier="AllUniqueCharactersButton"/>
                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                        <state key="normal" title="Button">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Set" largeTitleDisplayMode="never" id="Jd6-gt-V1w"/>
                    <connections>
                        <outlet property="additionalTextField" destination="K8S-76-5Km" id="kg7-Xu-SYn"/>
...
